# crypto_data_collector

./: README.md  dump.rdb  pyproject.toml  pytest.ini
config/: config.yaml  producers.yaml
docs/: ws_outputs.txt
examples/: run_pipeline.py
src/crypto_data_collector/: __init__.py  __main__.py  consumer.py  exceptions.py  helpers.py  main.py  producer.py  registry.py
tests/: test_data.py  test_helpers.py  test_pipeline.py  tests.py
