[tool.poetry]
name = "crypto_data_collector"
version = "0.1.0"
description = "Crypto Data pipeline"
authors = ["CannedKilroy <GenericArt@protonmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
ccxt = "^4.4.69"
pyyaml = "^6.0.2"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"


[tool.poetry.scripts]
crypto-pipeline = "crypto_data_collector.__main__:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
